package it.unibo.wildenc.mvc.controller.api;

public interface DataHandler {
    
}
